--- a/package.json
+++ b/package.json
@@ -13,41 +13,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@angular/router": "4.0.0",
-    "admin-lte": "2.3.11",
-    "core-js": "2.4.1",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/router": "5.0.0",
+    "admin-lte": "2.4.2",
+    "bootstrap": "^3.3.7",
+    "core-js": "2.5.1",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
-    "jquery": "3.1.1",
-    "reflect-metadata": "0.1.9",
-    "rxjs": "5.1.0",
+    "jquery": "3.2.1",
+    "reflect-metadata": "0.1.10",
+    "rxjs": "5.5.2",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.8.4"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.7",
-    "@angular/compiler-cli": "4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "7.0.5",
-    "codelyzer": "2.0.0",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "1.4.1",
-    "karma-chrome-launcher": "2.0.0",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@types/jasmine": "2.6.2",
+    "@types/node": "8.0.47",
+    "codelyzer": "4.0.0",
+    "jasmine-core": "2.8.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
-    "karma-remap-istanbul": "0.2.2",
-    "protractor": "5.1.0",
-    "ts-node": "2.1.0",
-    "tslint": "4.5.0",
-    "typescript": "2.2.0",
-    "webdriver-manager": "10.2.5"
+    "karma-remap-istanbul": "0.6.0",
+    "protractor": "5.2.0",
+    "ts-node": "3.3.0",
+    "tslint": "5.8.0",
+    "typescript": "^2.4.2",
+    "webdriver-manager": "12.0.6"
   }
 }
