--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "2.5.1",
     "font-awesome": "4.7.0",
+    "handlebars": "^4.0.11",
     "intl": "1.2.5",
     "jquery": "3.2.1",
     "reflect-metadata": "0.1.10",
