--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^5.2.9",
     "@angular/common": "5.2.8",
     "@angular/compiler": "5.2.8",
     "@angular/core": "5.2.8",
@@ -32,6 +33,7 @@
     "reflect-metadata": "0.1.12",
     "rxjs": "5.5.6",
     "ts-helpers": "1.1.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
