--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "5.2.8",
     "@angular/platform-browser-dynamic": "5.2.8",
     "@angular/router": "5.2.8",
-    "admin-lte": "2.4.2",
+    "admin-lte": "^2.4.3",
     "bootstrap": "^3.3.7",
     "core-js": "2.5.3",
     "font-awesome": "4.7.0",
@@ -44,12 +44,12 @@
     "codelyzer": "4.2.1",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.0",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.1",
     "karma-remap-istanbul": "0.6.0",
-    "protractor": "5.3.0",
+    "protractor": "^5.3.2",
     "ts-node": "5.0.1",
     "tslint": "5.9.1",
     "typescript": "^2.6.2",
