--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
+    "@angular/animations": "^5.2.8",
     "@angular/common": "5.2.8",
     "@angular/compiler": "5.2.8",
-    "@angular/core": "5.2.8",
+    "@angular/core": "^5.2.8",
     "@angular/forms": "5.2.8",
     "@angular/http": "5.2.8",
     "@angular/platform-browser": "5.2.8",
@@ -29,6 +29,8 @@
     "handlebars": "^4.0.11",
     "intl": "1.2.5",
     "jquery": "3.3.1",
+    "json-server": "^0.14.0",
+    "jsonwebtoken": "^8.3.0",
     "popper.js": "^1.14.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "5.5.6",
