--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "5.2.8",
     "@angular/platform-browser-dynamic": "5.2.8",
     "@angular/router": "5.2.8",
+    "@types/jsonwebtoken": "^7.2.8",
     "admin-lte": "^2.4.3",
     "bootstrap": "^3.3.7",
     "core-js": "2.5.3",
